# FinalesFunkeln

./: Cargo.toml  README.md
src/: bvh.rs  camera.rs  hit.rs  image.rs  lib.rs  main.rs  material.rs  math.rs  perlin.rs  ray.rs  rect.rs  rect_box.rs  sphere.rs  texture.rs  vec3.rs
src/shape/: constant_medium.rs  instance.rs  mod.rs  rect.rs  rect_box.rs  sphere.rs
