[package]
name = "finales_funkeln"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
edition = "2018"

[dependencies]
rand = "0.7.2"
rand_xoshiro = "0.4.0"
rayon = "1.2.0"
indicatif = "0.12.0"
lazy_static = "1.4.0"
image = "0.22.2"

[features]
f64 = []

[profile.release]
lto = true
codegen-units = 1
